refactor: simplify geojson structure
